<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gerwin.rially.show_opdrachten"
    tools:showIn="@layout/activity_show_opdrachten">

    <Button android:id="@+id/buttonChooseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosePhotoButton"
        android:layout_alignParentStart="true" />

    <ImageView android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/theImageToUpload"/>

    <ListView android:id="@+id/opdrachtenList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:visibility="gone">
    </ListView>

    <TextView android:id="@+id/noopdrachtentext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:text="@string/noopdrachten"
        android:visibility="gone"/>

    <Button android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadImage"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:visibility="gone"/>

</RelativeLayout>
